# Mnemosyne

./: Cargo.toml  justfile
src/: mnemosyne.rs
src/ctrls/: clio.rs  list.rs  mod.rs  new.rs
src/utils/: cli.rs  create.rs  event.rs  mod.rs
